@@ -1,4 +1,9 @@
 ﻿
+13/6/2016:
+* UP: flag manegement in UnitTest revamped even more: it now supports checking whether warnings and hints actually take place, via
+      a special scope-tracer object which can track warnings or hints shot while type-checking 
+
+
 10/6/2016:
 * UP: UnitTest flags for warning and hint manipulation have been extended and tested
 
